# YeetChess

./: .env.example  .gitattributes  .gitignore  docker-compose.yml  test_move_formats.py  test_phase1_phase2.py
backend/: .env.example  __init__.py  config.py  database.py  init.sql  main.py  pyproject.toml  pyrightconfig.json  pytest.ini  run_tests.sh
backend/api/: __init__.py  auth.py  games.py  websocket.py
backend/models/: __init__.py  game.py  user.py
backend/schemas/: __init__.py  game.py  user.py  websocket.py  ws_messages.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_games.py  test_websocket.py
backend/utils/: __init__.py  chess_engine.py  redis_client.py  security.py  websocket_manager.py
bots/: main.py  pyproject.toml
