[tool.poetry]
name = "yeetchess-bots"
version = "0.1.0"
description = "YeetChess Background Bot Worker"
authors = ["YeetChess <dev@yeetchess.local>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
redis = "^5.0.1"
python-chess = "^1.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
